@@ -22,3 +22,11 @@ class Book(models.Model, index.Indexed):
 
     def __str__(self):
         return self.title
+
+
+@python_2_unicode_compatible
+class Token(models.Model):
+    key = models.CharField(max_length=40, primary_key=True)
+
+    def __str__(self):
+        return self.key
